# DS-L-and-D-Programme

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst
heat_pump_exploration/analysis/: bad_summary.py  exploration.ipynb  exploration.py  inspect_data.py  scatter_plot.py
hpd/: __init__.py
hpd/config/: logging.yaml
